syntax = "proto3";

package merchant;

option go_package = "./pb/merchant;pb";
import "google/protobuf/timestamp.proto";

message Merchant{
    string id = 1;
    string user_id = 2;
    string name_merchant = 3;
    string lat = 4;
    string long = 5;
    string open_hour = 6;
    string close_hour = 7;
    string status = 8; // e.g. "open", "closed"
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
}

message MerchantListResponse {
    repeated Merchant merchants = 1;
}

message CreateMerchantRequest {
    string user_id = 1;
    string name_merchant = 2;
    string lat = 3;
    string long = 4;
    string open_hour = 5;
    string close_hour = 6;
    string status = 7; // e.g. "open", "closed"
}

message UpdateMerchantRequest {
    string id = 1;
    string user_id = 2;
    string name_merchant = 3;
    string lat = 4;
    string long = 5;
    string open_hour = 6;
    string close_hour = 7;
    string status = 8; // e.g. "open", "closed"
}

message DeleteMerchantRequest {
    string id = 1;
}

message DeleteMerchantResponse {
    string message = 1;
}

message MerchantResponse {
    Merchant Merchant = 1;
}

message GetByIdMerchantRequest {
    string id = 1;
}

message EmptyMerchant {}

service MerchantService {
  rpc CreateMerchant(CreateMerchantRequest) returns (MerchantResponse);
  rpc GetAllMerchant(EmptyMerchant) returns (MerchantListResponse); // âœ… BENAR
  rpc GetByIdMerchant(GetByIdMerchantRequest) returns (MerchantResponse);
  rpc UpdateMerchant(UpdateMerchantRequest) returns (MerchantResponse);
  rpc DeleteMerchant(DeleteMerchantRequest) returns (DeleteMerchantResponse);
}
